parse-display-tests/tests/compile_fail/display/invalid_format.stderr
error: invalid display format.
 --> $DIR/display_invalid_format.rs:3:11
  |
3 | #[display("{x")]
  |           ^^^^
